// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XAxis When XAxis values are all negative it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          -3
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="155%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          -1
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="15.000000000000007%"
          y="155%"
        >
          -3
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="63.75%"
          x2="63.75%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="48.75000000000001%"
          y="155%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="97.50000000000001%"
          x2="97.50000000000001%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="82.5%"
          y="155%"
        >
          -1
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          -3
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="155%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          -1
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="155%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="15%"
          y="155%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="63.75%"
          x2="63.75%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="48.75000000000001%"
          y="155%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="97.50000000000001%"
          x2="97.50000000000001%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="82.5%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="155%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="22.5%"
          x2="22.5%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="22.5%"
          y="155%"
        >
          -1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="15%"
          y="155%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="46.875%"
          x2="46.875%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="31.875%"
          y="155%"
        >
          -1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="97.50000000000001%"
          x2="97.50000000000001%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="82.5%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="22.5%"
          x2="22.5%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="22.5%"
          y="155%"
        >
          -1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="155%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="15%"
          y="155%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="63.75%"
          x2="63.75%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="48.75000000000001%"
          y="155%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="97.50000000000001%"
          x2="97.50000000000001%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="82.5%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="150%"
      y2="150%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="155%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="155%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="150%"
          y2="155%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="155%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;
